--- a/TravelExpenses/Views/Moneda/Edit.cshtml
+++ b/TravelExpenses/Views/Moneda/Edit.cshtml
@@ -11,22 +11,22 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label class="control-label">Clave Moneda</label>
-                    <input asp-for=@Model.moneda.ClaveMoneda class="form-control" />
+                    <input asp-for=@Model.moneda.ClaveMoneda class="form-control" placeholder="Clave de la Moneda" />
                     <span asp-validation-for=@Model.moneda.ClaveMoneda class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Descripción Moneda</label>
-                    <input asp-for=@Model.moneda.Descripcion class="form-control" />
+                    <input asp-for=@Model.moneda.Descripcion class="form-control" placeholder="Descripción de la Moneda"/>
                     <span asp-validation-for=@Model.moneda.Descripcion class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Descripción Corto</label>
-                    <input asp-for=@Model.moneda.NombreCorto  class="form-control" />
+                    <input asp-for=@Model.moneda.NombreCorto  class="form-control" placeholder="Nombre Corto"/>
                     <span asp-validation-for=@Model.moneda.NombreCorto class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Simbolo</label>
-                    <input asp-for=@Model.moneda.Simbolo class="form-control" />
+                    <input asp-for=@Model.moneda.Simbolo class="form-control" placeholder="Simbolo de la moneda"/>
                     <span asp-validation-for=@Model.moneda.Simbolo class="text-danger"></span>
                 </div>
                 <div class="form-group">
