--- a/TravelExpenses/Views/Destino/Edit.cshtml
+++ b/TravelExpenses/Views/Destino/Edit.cshtml
@@ -20,14 +20,15 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Estado</label>
-                    @Html.DropDownListFor(x => Model.Estados, new SelectList(Model.Estados, "IdEstado", "Descripcion"), htmlAttributes: new { @class = "form-control", id = "Estado", onchange = "CargaCiudades(this.value);" })
-                    <input asp-for="Estado.Descripcion" class="form-control" style="visibility:hidden" id="newEstado" />
+                    <select asp-for="Estado.IdEstado" class="form-control input-sm" onchange="CargaCiudades(this.value);"
+                            asp-items="@(new SelectList(Model.Estados, "IdEstado", "Descripcion"))" id="Estado"></select>
+                    <input asp-for="Estado.Descripcion" class="form-control" style="visibility:hidden" id="newEstado" placeholder="Agregue un nuevo estado" />
                     <span class="text-danger" asp-validation-for="Estados"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Ciudad</label>
                     @Html.DropDownListFor(x => Model.Ciudades, new SelectList(Model.Ciudades, "IdCiudad", "Descripcion"), htmlAttributes: new { @class = "form-control", id = "Ciudad", onchange = "" })
-                    <input asp-for="Ciudad.Descripcion" class="form-control" style="visibility:hidden" id="newCiudad" />
+                    <input asp-for="Ciudad.Descripcion" class="form-control" style="visibility:hidden" id="newCiudad" placeholder="Agregue una nueva ciudad"/>
                     <span class="text-danger" asp-validation-for="Ciudad.IdCiudad"></span>
                 </div>
 
