--- a/TravelExpenses/Views/Destino/Lista.cshtml
+++ b/TravelExpenses/Views/Destino/Lista.cshtml
@@ -53,7 +53,7 @@
 </div>
 <script type="text/javascript">
     function CargaCiudades(ClavePais) {        
-        var url = "/Destino/CargaCiudades/";
+        var url = "/Destino/CargaDestinos/";
  
 
         $.ajax({
