--- a/TravelExpenses/Views/Empresa/Edit.cshtml
+++ b/TravelExpenses/Views/Empresa/Edit.cshtml
@@ -9,12 +9,12 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label class="control-label">RFC</label>
-                    <input asp-for=@Model.Empresa.RFC class="form-control" />
+                    <input asp-for=@Model.Empresa.RFC class="form-control" placeholder="RFC de la Empresa" />
                     <span asp-validation-for=@Model.Empresa.RFC class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Descripción Empresa</label>
-                    <input asp-for=@Model.Empresa.Nombre class="form-control" />
+                    <input asp-for=@Model.Empresa.Nombre class="form-control" placeholder="Nombre o Razón Social" />
                     <span asp-validation-for=@Model.Empresa.Nombre class="text-danger"></span>
                 </div>
                 @*<div class="form-group">
