--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -49,7 +49,7 @@
             </a>
             <div class="collapse" id="ui-basic3">
                 <ul class="nav flex-column sub-menu">
-                    <li class="nav-item"><a asp-controller="Reembolso" asp-action="Lista" class="nav-link">Comprobar/Reembolso</a></li>
+                    <li class="nav-item"><a asp-controller="Rembolso" asp-action="Lista" class="nav-link">Comprobar/Rembolso</a></li>
                 </ul>
             </div>
         </li>
