Correccion de Registro

--- a/TravelExpenses/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -5,6 +5,9 @@
 }
 
 <header>
+    <div class="brand-logo">
+        <img src="~/Images/logo_Ozono.png" alt="logo">
+    </div>
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">You do not have access to this resource.</p>
 </header>
