--- a/TravelExpenses/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Olvidaste tu contraseña?";
 }
 
+<div class="brand-logo">
+    <img src="~/Images/logo_Ozono.png" alt="logo">
+</div>
 <h1>@ViewData["Title"]</h1>
 <h4>ingresa tu correo.</h4>
 <hr />
