--- a/TravelExpenses/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,8 +9,11 @@
     <div class="col-md-4">
     </div>
     <div class="col-md-4">
-        <h1>@ViewData["Title"]</h1>
 
+        <div class="brand-logo">
+            <img src="~/Images/logo_Ozono.png" alt="logo">
+        </div>
+        <h1>@ViewData["Title"]</h1>
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Nuevo Usuario.</h4>
             <hr />
