--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -34,7 +34,7 @@
                 </a>
                 <div class="collapse" id="ui-basic2">
                     <ul class="nav flex-column sub-menu">
-                        <li class="nav-item"> <a class="nav-link" asp-page="/Usuarios/UsuariosRoles">Roles</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-area="" asp-controller="Roles" asp-action="AdminRoles">Roles</a></li>
 
                     </ul>
                 </div>
