--- a/TravelExpenses/Views/Solicitudes/Edit.cshtml
+++ b/TravelExpenses/Views/Solicitudes/Edit.cshtml
@@ -10,7 +10,7 @@
 
     @*<partial name="ListarDestinos" model="new TravelExpenses.Core.Destinos { }"/>*@
 @*</div>*@
-<h1>Create</h1>
+<h1>Modificar</h1>
 
 <form asp-action="Create" method="post">
     <div class="text-left">
@@ -26,10 +26,10 @@
                     <div class="col-2">
                         <div class="form-group">
 
-                            <select asp-for="IdTipoSolicitud" class="form-control input-sm"
+                            @*<select asp-for="IdTipoSolicitud" class="form-control input-sm"
                                     asp-items="@(new SelectList(Model.Solicitudes, "IdTipoSolicitud", "Descripcion"))"></select>
                             @Html.ValidationMessageFor(x => x.Solicitud, "", new { @class = "text-danger" })
-                            <span asp-validation-for="@Model.Solicitud.IdTipoSolicitud" class="text-danger"></span>
+                            <span asp-validation-for="@Model.Solicitud.IdTipoSolicitud" class="text-danger"></span>*@
                         </div>
                     </div>
                     <div class="col-2">
@@ -68,17 +68,17 @@
                         Moneda:
                     </div>
                     <div class="col-2">
-                        <select asp-for="ClaveMoneda" class="form-control input-sm"
+                        @*<select asp-for="ClaveMoneda" class="form-control input-sm"
                                 asp-items="@(new SelectList(Model.Monedas, "ClaveMoneda", "Descripcion"))"></select>
                         @Html.ValidationMessageFor(x => x.Moneda, "", new { @class = "text-danger" })
-                        <span asp-validation-for="@Model.Moneda.ClaveMoneda" class="text-danger"></span>
+                        <span asp-validation-for="@Model.Moneda.ClaveMoneda" class="text-danger"></span>*@
                     </div>
                 </div>
                 <br />
                 @* Another section *@
                 <div class="row">
                     <div class="col-2">
-                       
+
                     </div>
                     <div class="col-2">
 
@@ -92,11 +92,11 @@
                     </div>
 
                     <div class="col-2">
-                      
+
                     </div>
 
                     <div class="col-2">
-                        
+
                     </div>
                 </div>
                 <br />
@@ -141,30 +141,30 @@
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
 
-                                <label asp-for="ClavePais" class="control-label">País</label>
+                                @*<label asp-for="ClavePais" class="control-label">País</label>
                                 <select asp-for="Pais.ClavePais" class="form-control input-sm" onchange="CargaEstados(this.value);" title="--Seleccione un país"
                                         asp-items="@(new SelectList(Model.Paises, "ClavePais", "Nombre"))">
                                     <option value="">--Seleccione un País</option>
-                                </select>
+                                </select>*@
                                 @*<input asp-for="ClavePais" class="form-control" />*@
                                 <span asp-validation-for="ClavePais" class="text-danger">*</span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="IdEstado" class="control-label">Estado</label>
+                                @*<label asp-for="IdEstado" class="control-label">Estado</label>
                                 <select asp-for="Estado.IdEstado" class="form-control input-sm" onchange="CargaCiudades(this.value);"
                                         asp-items="@(new SelectList(Model.Estados, "IdEstado", "Descripcion"))" id="Estado">
                                     <option value="">--Seleccione un Estado</option>
-                                </select>
+                                </select>*@
 
                                 <span asp-validation-for="IdEstado" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="@Model.Destino.IdCiudad" class="control-label">Ciudad</label>
+                                @*<label asp-for="@Model.Destino.IdCiudad" class="control-label">Ciudad</label>
                                 <select asp-for="Ciudad.IdCiudad" class="form-control input-sm"
                                         asp-items="@(new SelectList(Model.Ciudades, "IdCiudad", "Descripcion"))" id="Ciudad">
                                     <option value="">--Seleccione una Ciudad</option>
                                 </select>
-                                <span asp-validation-for="@Model.Destino.IdCiudad" class="text-danger"></span>
+                                <span asp-validation-for="@Model.Destino.IdCiudad" class="text-danger"></span>*@
                             </div>
 
                             <div class="form-group">
@@ -196,7 +196,7 @@
 
                                 <div class="row">
                                     <div class="table-responsive">
-                                        <table  id="data-table-basic" class="table table-hover text-center">
+                                        <table id="data-table-basic" class="table table-hover text-center">
                                             <thead>
 
                                                 <tr>
@@ -211,23 +211,23 @@
                                             </thead>
                                             <tbody>
 
-                                                @foreach (var destino in Model.Destinos)
+                                                @*@foreach (var destino in Model.Destinos)
                                                 {
-                                                <tr>
-                                                    <td>@destino.Nombre</td>
-                                                    <td>@destino.Descripcion</td>
-                                                    <td>@destino.FechaSalida</td>
-                                                    <td>@destino.FechaLlegada</td>
-                                                    <td>@destino.Motivo</td>
-                                                    <td>@destino.Folio</td>
-                                                    <td>
-                                                        <a class="btn btn-lg" asp-controller="Solicitudes" asp-action="Edit" asp-route-Folio="@destino.Folio" id="accion">
-                                                            <i class="fas fa-edit"></i>
-                                                        </a>
-                                                    </td>
-                                                </tr>
+                                                    <tr>
+                                                        <td>@destino.Nombre</td>
+                                                        <td>@destino.Descripcion</td>
+                                                        <td>@destino.FechaSalida</td>
+                                                        <td>@destino.FechaLlegada</td>
+                                                        <td>@destino.Motivo</td>
+                                                        <td>@destino.Folio</td>
+                                                        <td>
+                                                            <a class="btn btn-lg" asp-controller="Solicitudes" asp-action="Edit" asp-route-Folio="@destino.Folio" id="accion">
+                                                                <i class="fas fa-edit"></i>
+                                                            </a>
+                                                        </td>
+                                                    </tr>
 
-                                                }
+                                                }*@
                                             </tbody>
                                         </table>
                                     </div>
@@ -237,7 +237,7 @@
 
 
                         </div>
-                        <div id="Gastos"  class="container tab-pane fade">
+                        <div id="Gastos" class="container tab-pane fade">
                             <h4>Sección de gastos</h4>
                         </div>
 
